Initial Spotify: think push for pause

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CLIENT_ID = 'Your Emotiv Client ID'
-CLIENT_SECRET = 'Your Emotiv Client Secret'
+CLIENT_ID = 'REDACTED_PASSWORD_3'
+CLIENT_SECRET = 'REDACTED_PASSWORD_4'
