queue and skip songs

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CLIENT_ID = 'REDACTED_PASSWORD_3'
-CLIENT_SECRET = 'REDACTED_PASSWORD_4'
+EMOTIV_CLIENT_ID = 'REDACTED_PASSWORD_3'
+EMOTIV_CLIENT_SECRET = 'REDACTED_PASSWORD_4'
