rough ROUGH recommendation LOL

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMOTIV_CLIENT_ID = 'REDACTED_PASSWORD_3'
-EMOTIV_CLIENT_SECRET = 'REDACTED_PASSWORD_4'
+EMOTIV_CLIENT_ID = ''
+EMOTIV_CLIENT_SECRET = ''
